--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="money">💸</span>
-        <a href="/">Tech blog</a>
+        <a href="/">Fund My Project!</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
@@ -31,7 +31,7 @@
       {{{ body }}}
     </main>
     <footer>
-
+      
     </footer>
   </div>
 
